client and server target in Makefile

--- a/src/server/Makefile
+++ b/src/server/Makefile
@@ -8,7 +8,7 @@ BUILDDIR = ../../bin
 INCLUDEDIR = ../../include
 
 CFLAGS  = -std=c++17 -Wall -Wextra -Wpedantic -I./ -I$(INCLUDEDIR) -O3
-LDFLAGS = -lpthread $(BUILDDIR)/libmigdb.a
+LDFLAGS = 
 GTKLIBS = $(shell pkg-config --cflags --libs gtkmm-3.0 gtksourceviewmm-3.0 libssh)
 
 PRGS = $(addprefix $(BUILDDIR)/, $(TRGTS))
@@ -17,8 +17,10 @@ OBJS = $(addprefix $(BUILDDIR)/, $(SRCS:.cpp=.o))
 
 all: $(PRGS)
 
-$(BUILDDIR)/server: $(addprefix $(BUILDDIR)/, $(addsuffix .o, startup breakpoint breakpoint_dialog canvas window server))
+$(BUILDDIR)/libmigdb.a:
 	+$(MAKE) -C $(INCLUDEDIR)/libmigdb
+
+$(BUILDDIR)/server: $(addprefix $(BUILDDIR)/, $(addsuffix .o, startup breakpoint breakpoint_dialog canvas window server)) $(BUILDDIR)/libmigdb.a
 	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS) $(GTKLIBS)
 
 $(BUILDDIR)/%.o: %.cpp
