warnings are errors

--- a/include/libmigdb/Makefile
+++ b/include/libmigdb/Makefile
@@ -6,7 +6,7 @@ BUILDDIR = ../../bin
 INCLUDEDIR = ../
 
 CC = g++
-CFLAGS = -std=c++17 -Wall -Wextra -Wpedantic -O3 -I$(INCLUDEDIR)
+CFLAGS = -std=c++17 -Wall -Wextra -Wpedantic -Werror -O3 -I$(INCLUDEDIR)
 
 SRCS = $(shell find ./ -name '*.c')
 OBJS = $(addprefix $(BUILDDIR)/, $(SRCS:.c=.o))
