added icon and desktop file

--- a/src/master/Makefile
+++ b/src/master/Makefile
@@ -1,5 +1,5 @@
 #!/usr/bin/make
-TRGTS = pgdbmaster
+TRGTS = pgdb
 
 CC = g++
 RM = rm
@@ -28,7 +28,7 @@ $(BUILDDIR)/libmigdb.a:
 $(BUILDDIR)/resources.c:
 	cd $(ROOTDIR) && glib-compile-resources pgdb.gresource.xml --target=bin/resources.c --generate-source
 
-$(BUILDDIR)/pgdbmaster: $(addprefix $(BUILDDIR)/, $(addsuffix .o, startup breakpoint breakpoint_dialog canvas window master resources)) $(BUILDDIR)/libmigdb.a
+$(BUILDDIR)/pgdb: $(addprefix $(BUILDDIR)/, $(addsuffix .o, startup breakpoint breakpoint_dialog canvas window master resources)) $(BUILDDIR)/libmigdb.a
 	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS) $(GTKMM) $(GTKSRCVIEW) $(LIBSSH)
 
 $(BUILDDIR)/%.o: %.cpp
@@ -36,6 +36,9 @@ $(BUILDDIR)/%.o: %.cpp
 
 $(BUILDDIR)/window.o: window.cpp
 	$(CC) $(CFLAGS) -c $< -o $@ $(GTKMM) $(GTKSRCVIEW)
+
+.PHONY: resources
+resources: $(BUILDDIR)/resources.o
 
 $(BUILDDIR)/resources.o: $(BUILDDIR)/resources.c
 	$(CC) $(CFLAGS) -c $< -o $@ $(GLIB)
