moved custom launcher to radio button section

--- a/example/config
+++ b/example/config
@@ -1,16 +1,13 @@
+launcher=mpirun
+launcher_args=
 number_of_processes=8
 processes_per_node=
 num_nodes=
-launcher=mpirun
-launcher_args=
-slave=./bin/pgdbslave
-target=./example/bin/target
-arguments=
+slave_path=./bin/pgdbslave
 ip_address=127.0.0.1
+target_path=./example/bin/target
+target_args=
 ssh=false
 ssh_address=
 ssh_user=
 ssh_password=
-custom_launcher=false
-custom_cmd=
-
